--- a/_publications/2022-09-23-GAGA.md
+++ b/_publications/2022-09-23-GAGA.md
@@ -1,11 +1,10 @@
 ---
 title: "GAGA: Deciphering Age-path of Generalized Self-paced Regularizer"
 collection: publications
-permalink: /publication/2021-04-28-nanoseq
-excerpt: '123'
-date: 2022
+permalink: /publication/2022-09-23-GAGA.
+excerpt: ''
+date: 2022-09-23
 venue: NeurIPS 2022
 paperurl: 'https://arxiv.org/abs/2209.07063'
-citation: '123'
+citation: ''
 ---
-[Download paper here](https://doi.org/10.1038/s41586-021-03477-4)
